pomxml für exe datei