@@ -20,38 +20,47 @@
             <artifactId>fxgl</artifactId>
             <version>21.1</version>
         </dependency>
-        <!-- SLF4J API (optional, da logback-classic es transitiv liefert) -->
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.17</version>
         </dependency>
-        <!-- Logback als Implementierung -->
-        <dependency> <groupId>ch.qos.logback</groupId>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.5.24</version>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.17.2</version>
         </dependency>
-
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <artifactId/>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.6.0</version>
                 <configuration>
+                    <name>Produktionslinie</name>
+                    <appVersion>1.0</appVersion>
+                    <vendor>Betriebssysteme</vendor>
                     <mainClass>org.betriebssysteme.view.ProductionLineApp</mainClass>
-                    <commandlineArgs>
-                        --enable-native-access=ALL-UNNAMED
-                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </commandlineArgs>
+                    <type>exe</type>
+                    <icon>src/main/resources/icon.ico</icon>
+                    <javaOptions>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>--sun-misc-unsafe-memory-access=allow</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+                    </javaOptions>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
